--- a/apps/svelte-blog/src/components/Post/style/post.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/post.module.scss
@@ -30,7 +30,9 @@
     color: var(--inline-code-text, #e5e7eb);
     padding: 0.125rem 0.375rem;
     border-radius: 0.25rem;
-    font-family: 'Fira Code', 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New', monospace;
+    font-family:
+      'Fira Code', 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New',
+      monospace;
     font-size: 0.875em;
     font-weight: 600;
   }
